# miod

./: .gitignore  CMakeLists.txt  README.md  dictex.yaml  example_launch.txt  exmple_launch.txt  package.xml  ros_px4.sh  roslaunch_test.py  roslaunch_test_M.py  trajectory.py
channel_simulator/: CMakeLists.txt  package.xml
channel_simulator/include/channel_simulator/: channel_simulator.h
channel_simulator/src/: channel_simulator.cpp  channel_simulator_test.cpp
grid_mapping/: CMakeLists.txt  package.xml
grid_mapping/include/grid_mapping/: common.h  grid.h  grid.hpp  grid_base.h  point.h
grid_mapping/src/: common.cpp  grid_base.cpp  grid_test.cpp
intel_aero_demos/: CMakeLists.txt  package.xml
intel_aero_demos/config/: 2t1n_line.yaml  2t3n_PingPong_patrol.yaml  2t3n_patrol.yaml  3t1n_circle_patrol.yaml  3t3n_circle_patrol.yaml  3t6n_circle_patrol.yaml  lejeune_ellipse.yaml
intel_aero_demos/launch/: 2t3n_PingPong.launch  2t3n_patrol.launch  3_task_1_network.launch  3_task_3_network.launch  3_task_6_network.launch  3t1n_circle.launch  3t3n_circle.launch  3t6n_circle.launch  heatmap.launch  lejeune_ellipse.launch  lejeune_patrol.launch  line.launch  patrol.launch  simple_spawn_M.launch  swarm.launch
intel_aero_demos/rviz/: lejeune_patrol.rviz  line.rviz  net_patrol.rviz  patrol.rviz  swarm.rviz
intel_aero_demos/scripts/: circle_patrol  lejeune_patrol  line_patrol  network_planner_node  network_planner_patrol_node
intel_aero_demos/src/: heatmap.cpp  lejeune_patrol  line.cpp  patrol.cpp  swarm.cpp
intel_aero_description/: CMakeLists.txt  intel_aero.urdf  package.xml
intel_aero_description/meshes/: realsense.dae
intel_aero_description/urdf/: component_snippets.xacro  intel_aero.xacro  iris.xacro  iris_base.xacro  multirotor_base.xacro  r200.macro.xacro
intel_aero_experiments/: CMakeLists.txt  package.xml
intel_aero_experiments/cfg/: 2t1n_line.yaml  2t3n_PingPong_patrol.yaml  px4_comm_params.txt  px4_common.yaml  px4_params.txt  px4_pluginlists.yaml  px4_task_params.txt
intel_aero_experiments/launch/: gps_relative_transformation_test.launch  intel_aero_live.launch  intel_aero_live_one_uav_line.launch  line_mavros_params.launch  line_server.launch  mavros_params.launch  net_patrol.launch  outdoor_test.launch
intel_aero_experiments/maps/: empty.pgm  empty.yaml
intel_aero_experiments/rviz/: line.rviz  net_patrol.rviz  outdoor_test.rviz
intel_aero_experiments/src/: network_planner_net_patrol_node.cpp  outdoor_action_test.cpp  outdoor_test.cpp  task_agents_net_patrol_node.cpp
intel_aero_gazebo/: CMakeLists.txt  package.xml  px4_env.sh  swarm1.rviz
intel_aero_gazebo/SITL/: aero_1  aero_2  aero_3  aero_4  aero_5  aero_6  aero_7  px4_common.yaml  px4_config_1.yaml
intel_aero_gazebo/cfg/: px4_common.yaml  px4_pluginlists.yaml
intel_aero_gazebo/launch/: agents.launch  example.launch  host.launch  intel_aero.launch  intel_aero_px4.launch  intel_aero_spawn_only.launch  intel_aero_test.launch  intel_aero_unity.launch  network_viz.launch  simulation.launch  swarm.launch  tut_example.launch
intel_aero_gazebo/maps/: empty.pgm  empty.yaml  terrain.bt  terrain_no_ground.bt
intel_aero_gazebo/rviz/: example.rviz  intel_aero_test.rviz  swarm.rviz  swarm1.rviz  swarm2.rviz  swarm3.rviz  swarm7.rviz  tut_example.rviz
intel_aero_gazebo/src/: model_tf_publisher.cpp  offboard_test.cpp  set_velocity_plugin.cpp  swarm_test.cpp
intel_aero_navigation/: CMakeLists.txt  package.xml  plugin.xml
intel_aero_navigation/action/: WaypointNavigation.action
intel_aero_navigation/include/intel_aero_navigation/: gazebo_vel_nav.h  mavros_uav.h  nav_base.h  px4_nav.hpp  vel_nav.h  waypoint_navigation.h  waypoint_navigation_vel.h
intel_aero_navigation/src/: 2d_path_planning.cpp  action_test.cpp  action_test_vel.cpp  gazebo_vel_nav.cpp  gazebo_vel_nav_node.cpp  gazebo_vel_nav_nodelet.cpp  gps_tf_node.cpp  mavros_uav.cpp  nav_base.cpp  navigation_test.cpp  px4_nav_node.cpp  px4_nav_nodelet.cpp  vel_nav.cpp  vel_nav_node.cpp  vel_nav_nodelet.cpp  waypoint_navigation.cpp  waypoint_navigation_node.cpp  waypoint_navigation_nodelet.cpp  waypoint_navigation_vel.cpp  waypoint_navigation_vel_node.cpp  waypoint_navigation_vel_nodelet.cpp
network_planner/: CMakeLists.txt  package.xml  setup.py
network_planner/include/network_planner/: network_planner.h
network_planner/launch/: patrol.launch  routing.launch
network_planner/src/: counting.cpp  network_planner.cpp  network_planner_line_node.cpp  network_planner_node.cpp  network_planner_patrol_node.cpp  network_planner_routing_node.cpp  network_planner_test.cpp  test.cpp
network_planner/src/network_planner/: connectivity_optimization.py  network_planner.py
network_status/: CMakeLists.txt  package.xml
network_status/include/network_status/: network_status.h
network_status/msg/: RatePair.msg
network_status/src/: channel_visualization_node.cpp  intel_demo.cpp  network_visualization_node.cpp  routing_channel_visualization_node.cpp  routing_visualization_node.cpp
roslaunch_python/: roslaunch_one_uav.py  (+5 more)
routing_protocol/: CMakeLists.txt  README.md  package.xml  packages.txt  results_parser.py  test.py
routing_protocol/launch/: launch_pos_sub.launch  launch_sub.launch  launch_test.launch
routing_protocol/rt_subscriber/: CMakeLists.txt  package.xml
routing_protocol/rt_subscriber/launch/: launch_sub.launch  launch_test.launch
routing_protocol/rt_subscriber/src/: rt_update.cpp
routing_protocol/src/: main_cli.py  main_srv.py  pos_update_sub.py  results_parser.py  results_parser_comparison.py  routing_client  routing_server  routing_tables_upd.txt  rt_update_sub.cpp  rt_update_sub.py  test.py
socp/: CMakeLists.txt  package.xml  setup.py
socp/include/: armadillo_socp.h  socp.h
socp/msg/: Flow.msg  QoS.msg
socp/src/: armadillo_example.cc  armadillo_socp.cc  radio_example.cc  radio_example2.cc  robust_routing_socp_server.py  rr_socp.py  rr_socp_server.py  rr_socp_tests.py  socp.c  socp_srv_test.py
socp/src/socp/: channel_model.py  rr_socp.py  rr_socp_server.py  rr_socp_tests.py
socp/srv/: RobustRoutingSOCP.srv
(+7 files in other folders)
