<?xml version="1.0"?>
<package format="2">
  <name>channel_simulator</name>
  <version>0.0.0</version>
  <description>wireless channel communication rate estimation node</description>

  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>roscpp</depend>

</package>
