<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_description</name>
  <version>0.0.0</version>
  <description>The intel_aero_description package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo_ros
    plugin_path="${prefix}/lib"
    gazebo_media_path="${prefix}"
    gazebo_model_path="${prefix}/models"
    />
  </export>

</package>
