<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_experiments</name>
  <version>0.0.0</version>
  <description>The intel_aero_experiments package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>intel_aero_navigation</depend>

</package>
