<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_gazebo</name>
  <version>0.0.0</version>
  <description>The intel_aero_gazebo package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
