<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_gazebo</name>
  <version>0.0.0</version>
  <description>The intel_aero_gazebo package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>costmap_2d</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
