<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_navigation</name>
  <version>0.0.0</version>
  <description>The intel_aero_navigation package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>genmsg</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>nav_msgs</depend>
  <depend>grid_mapping</depend>
  <depend>nodelet</depend>

  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
  </export>

</package>
