<?xml version="1.0"?>
<package format="2">
  <name>intel_aero_navigation</name>
  <version>0.0.0</version>
  <description>The intel_aero_navigation package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>genmsg</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>nav_msgs</depend>
  <depend>grid_mapping</depend>
  <depend>nodelet</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
  </export>

</package>
