<?xml version="1.0"?>
<package format="2">
  <name>network_status</name>
  <version>0.0.0</version>
  <description>The network_status package</description>
  <maintainer email="daniel@todo.todo">daniel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
