<?xml version="1.0"?>
<package format="2">
  <name>routing_protocol</name>
  <version>0.0.0</version>
  <description>The routing_protocol package</description>
  <maintainer email="mishanya@todo.todo">mishanya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>routing_msgs</depend>
  <depend>sensor_msgs</depend>


</package>
