<package>
  <name>socp</name>
  <version>1.0.0</version>
  <description>socp</description>
  <maintainer email="a@a.com">Daniel Mox</maintainer>

  <license>BSD</license>

  <author>Daniel Mox</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>armadillo</build_depend>
  <build_depend>libblas-dev</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>atlas</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>armadillo</run_depend>
  <run_depend>libblas-dev</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>atlas</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>

<export>
    <cpp lflags="-Wl,-rpath,${prefix} -L${prefix}/lib -larmadillo_socp" cflags="-I${prefix}/include"/>
</export>

</package>
